# cuc-cung

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  AGENT_HUB_DESIGN.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY_GOOGLE_OAUTH.md  Dockerfile  E2E_TEST_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  REVIEW.md  UIUX_REVIEW.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: agents.py  artifacts.py  auth.py  chat.py  deps.py  feedback.py  history.py  knowledge.py  mcp.py  review.py  skills.py  templates.py  upload.py
app/auth/: google_oauth.py  jwt_utils.py  middleware.py  models.py  rate_limiter.py
app/builder/: master.py  master_system.md  templates.py
app/core/: agent_test.py  capabilities.py  chat_engine.py  governance.py  models.py  router.py
app/knowledge/: chunker.py  service.py  store.py
app/llm/: anthropic_client.py  base.py  openai_client.py
app/memory/: agentbase_memory.py  base.py  sql_memory.py
app/storage/: base.py  sql.py
app/tools/: base.py  catalog.py  file_export.py  mcp_gateway.py  net.py  partner_integration.py  zalopay_deals.py  zalopay_docs.py  zalopay_faq.py
checks/: check1_maas.sh
e2e/: README.md  conftest.py  test_ui_flows.py
evals/: __init__.py  __main__.py  cases.json  runner.py
evals/results/: 20260615-131435.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_uuid_tagline_unicode.py  0003_indexes_escalate.py  0004_feedback.py  0005_conv_meta.py  0006_conv_meta_title.py  0007_users.py  0008_user_salutation.py  0009_conversation_id.py  0010_agent_docs.py  0011_usage_observability.py  0012_agent_web_search.py
reviews/: mr_101.md  mr_102.md  mr_103.md
scripts/: verify_live.py
seeds/: demo_data.py
tests/: conftest.py  test_agent_flows.py  test_artifacts.py  test_capabilities.py  test_catalog.py  test_chunker.py  test_cjk_filter.py  test_engine_workspace_gating.py  test_eval_harness.py  test_file_export.py  test_gitlab_mock.py  test_governance.py  test_guest_mode.py  test_mcp_gateway.py  test_net.py  test_orchestration.py  test_p1_stability.py  test_p2_prompt.py  test_p2_sandbox_parity.py  test_partner_integration.py  test_router.py  test_salutation.py  test_security_fixes.py  test_sla_tiers.py  test_stateful_tools.py  test_templates.py  test_templates_api.py  test_upia_rag.py  test_upload.py  test_validate.py
web/: app.js  bg-fx.js  demo-data.js  index.html  style.css  ui-icons.js
(+67 files in other folders)
