[project]
name = "agent-hub"
version = "0.1.0"
description = "Agent Hub — meta-agent system trên GreenNode AgentBase (Claw-a-thon 2026)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "python-docx>=1.0",
    "python-multipart>=0.0.9",
    "ddgs>=9.0",
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",
    # bcrypt phải <4.1: passlib 1.7.4 đọc bcrypt.__about__.__version__ (đã bị bỏ từ 4.1)
    # và bcrypt 5.x làm detect_wrap_bug raise → app crash khi hash/verify password.
    "bcrypt>=4.0,<4.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["app*"] } }
